--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-# I don't think anything needs ignoring.
+# I suppose I'll add what Simon has in its .gitignore...
+.DS_Store
+node_modules/
+.vscode/
+dbkeys.sh
+cookie.txt
